--- a/Scraper.csproj
+++ b/Scraper.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
     <PackageReference Include="Microsoft.Playwright" Version="1.30.0" />
   </ItemGroup>
 
