--- a/src/WarehouseScraper.csproj
+++ b/src/WarehouseScraper.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="Microsoft.Playwright" Version="1.30.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Urls.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
